changed folder to /tmp

--- a/templates/result.html
+++ b/templates/result.html
@@ -34,7 +34,7 @@
         <h3>pLDDT Score: {{ b_value }}</h3>
         <p>The pLDDT (predicted local distance difference test) score 
             is a confidence estimate of the predicted structure compared 
-            to the actual structure on a scale of 0-100.</p>
+            to the actual structure on a scale of 0.0-1.0</p>
     </div>
 
     <script src="https://3Dmol.org/build/3Dmol-min.js"></script>
